--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -39,8 +39,7 @@
             "label": "RUN",
             "dependsOn": [
                 "React",
-                "API",
-                "Open Chrome"
+                "API"
             ],
             "dependsOrder": "parallel",
             "type": "shell",
@@ -58,29 +57,6 @@
                 "kind": "build",
                 "isDefault": true
             }
-        },
-        {
-            "label": "Open Chrome",
-            "type": "shell",
-            "isBackground": true,
-            "windows": {
-                "command": "explorer \"http://localhost:3456\""
-            },
-            "linux": {
-                "command": "google-chrome http://localhost:3456"
-            },
-            "osx":{
-                "command": "open http://localhost:3456"
-            },
-            "problemMatcher": [],
-            "presentation": {
-                "echo": false,
-                "reveal": "silent",
-                "focus": false,
-                "panel": "shared",
-                "showReuseMessage": false,
-                "clear": true
-            },
         }
     ]
 }
