--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
         "ts-pnp": "1.2.0",
         "url-loader": "2.3.0",
         "webpack": "4.42.1",
-        "webpack-dev-server": "3.10.3",
+        "webpack-dev-server": "^3.11.0",
         "webpack-manifest-plugin": "2.2.0",
         "workbox-webpack-plugin": "4.3.1"
     },
@@ -121,21 +121,7 @@
             "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
             "^.+\\.module\\.(css|sass|scss)$"
         ],
-        "modulePaths": [
-            "Z:\\Javascript\\react-express-website\\node_modules\\.pnpm\\registry.npmjs.org\\react-scripts\\3.4.1\\node_modules\\react-scripts\\bin\\react-scripts.js\\node_modules",
-            "Z:\\Javascript\\react-express-website\\node_modules\\.pnpm\\registry.npmjs.org\\react-scripts\\3.4.1\\node_modules\\react-scripts\\bin\\node_modules",
-            "Z:\\Javascript\\react-express-website\\node_modules\\.pnpm\\registry.npmjs.org\\react-scripts\\3.4.1\\node_modules\\react-scripts\\node_modules",
-            "Z:\\Javascript\\react-express-website\\node_modules\\.pnpm\\registry.npmjs.org\\react-scripts\\3.4.1\\node_modules",
-            "Z:\\Javascript\\react-express-website\\node_modules\\.pnpm\\registry.npmjs.org\\react-scripts\\node_modules",
-            "Z:\\Javascript\\react-express-website\\node_modules\\.pnpm\\registry.npmjs.org\\node_modules",
-            "Z:\\Javascript\\react-express-website\\node_modules\\.pnpm\\node_modules",
-            "Z:\\Javascript\\react-express-website\\node_modules",
-            "Z:\\Javascript\\node_modules",
-            "Z:\\node_modules",
-            "Z:\\Javascript\\react-express-website\\node_modules\\react-scripts\\bin\\react-scripts.js\\node_modules",
-            "Z:\\Javascript\\react-express-website\\node_modules\\react-scripts\\bin\\node_modules",
-            "Z:\\Javascript\\react-express-website\\node_modules\\react-scripts\\node_modules"
-        ],
+        "modulePaths": [],
         "moduleNameMapper": {
             "^react-native$": "react-native-web",
             "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
