--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
     "private": true,
     "main": "src/bin/www",
     "scripts": {
-        "nodemon": "nodemon -r dotenv/config src/bin/www",
+        "start": "serve -s build -l 80",
         "webpack": "node scripts/start.js",
-        "dev": "start /B npm run webpack & start npm run nodemon",
-        "build": "node scripts/build.js",
-        "test": "node scripts/test.js"
+        "build": "node scripts/build.js"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -44,8 +42,6 @@
         "css-loader": "3.4.2",
         "dateformat": "^3.0.3",
         "debug": "~2.6.9",
-        "dotenv": "8.2.0",
-        "dotenv-expand": "5.1.0",
         "eslint": "^6.6.0",
         "eslint-config-react-app": "^5.2.1",
         "eslint-loader": "3.0.3",
@@ -54,7 +50,6 @@
         "eslint-plugin-jsx-a11y": "6.2.3",
         "eslint-plugin-react": "7.19.0",
         "eslint-plugin-react-hooks": "^1.6.1",
-        "express": "~4.16.1",
         "file-loader": "4.3.0",
         "fs-extra": "^8.1.0",
         "html-webpack-plugin": "4.0.0-beta.11",
@@ -65,7 +60,6 @@
         "jest-resolve": "24.9.0",
         "jest-watch-typeahead": "0.5.0",
         "mini-css-extract-plugin": "0.9.0",
-        "morgan": "~1.9.1",
         "optimize-css-assets-webpack-plugin": "5.0.3",
         "pnp-webpack-plugin": "1.6.4",
         "postcss-flexbugs-fixes": "4.2.0",
@@ -74,7 +68,6 @@
         "postcss-preset-env": "6.7.0",
         "postcss-safe-parser": "4.0.2",
         "prop-types": "^15.7.2",
-        "pug": "^2.0.4",
         "react": "^16.13.1",
         "react-app-polyfill": "^1.0.6",
         "react-dev-utils": "^10.2.1",
@@ -147,5 +140,8 @@
         "presets": [
             "react-app"
         ]
+    },
+    "devDependencies": {
+        "serve": "^11.3.2"
     }
 }
