--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,12 +1,12 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558 
+    // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
             "label": "React",
             "type": "npm",
-            "script": "webpack",
+            "script": "dev",
             "problemMatcher": [],
             "presentation": {
                 "echo": true,
@@ -17,46 +17,11 @@
                 "clear": true,
                 "group": "groupA"
             },
-            "promptOnClose": false
-        },
-        {
-            "label": "API",
-            "type": "npm",
-            "script": "nodemon",
-            "problemMatcher": [],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "new",
-                "showReuseMessage": false,
-                "clear": true,
-                "group": "groupA"
-            },
-            "promptOnClose": false,
-        },
-        {
-            "label": "RUN",
-            "dependsOn": [
-                "React",
-                "API"
-            ],
-            "dependsOrder": "parallel",
-            "type": "shell",
-            "problemMatcher": [],
-            "presentation": {
-                "echo": true,
-                "reveal": "silent",
-                "focus": false,
-                "panel": "dedicated",
-                "showReuseMessage": false,
-                "clear": true,
-            },
-            "promptOnClose": false,
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "promptOnClose": false
         }
     ]
 }
